update with e2e eval

--- a/examples/finetune_tot.ipynb
+++ b/examples/finetune_tot.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "37598c9a-64e3-4f91-8566-d0f76c1029c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/tbai4/llama3/llama\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tbai4/llama3/.venv/lib/python3.12/site-packages/IPython/core/magics/osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
+      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
@@ -19,6 +35,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tbai4/llama3/llama/util.py:55: UserWarning: 12288 does not lie within [1, 8192]\n",
+      "  warnings.warn(f\"{max_seq_len} does not lie within [1, 8192]\")\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -26,7 +50,7 @@
       "> initializing ddp with size 1\n",
       "> initializing pipeline with size 1\n",
       "Converting to LoRA\n",
-      "Loaded in 18.88 seconds\n"
+      "Loaded in 18.11 seconds\n"
      ]
     },
     {
@@ -53,8 +77,8 @@
     "workflow = Workflow.build(\n",
     "    ckpt_dir='/scratch4/jeisner1/tjbai/llama_8b',\n",
     "    tokenizer_path='/scratch4/jeisner1/tjbai/llama_8b/tokenizer.model',\n",
-    "    max_seq_len=8192,\n",
-    "    max_batch_size=4,\n",
+    "    max_seq_len=12288,\n",
+    "    max_batch_size=2,\n",
     "    model_parallel_size=1,\n",
     "    max_nodes=20,\n",
     "    use_lora=True,\n",
@@ -340,15 +364,14 @@
    "source": [
     "import torch\n",
     "import json\n",
+    "import random\n",
+    "import random\n",
     "from llama import Llama\n",
     "from llama.workflows.tot import load_math_problems, benchmark_tricky_tot\n",
     "from tqdm import tqdm\n",
     "\n",
-    "problems = load_math_problems(\n",
-    "    '../data/MATH',\n",
-    "    split='train',\n",
-    "    problem_types=['counting_and_probability']\n",
-    ")[:100]\n",
+    "problems = load_math_problems('../data/MATH', split='val')\n",
+    "problems = random.sample(problems, 200)\n",
     "\n",
     "for id in [99, 199, 299, 399]: \n",
     "    checkpoint = torch.load(f'/scratch4/jeisner1/tjbai/checkpoints/lora_epoch-0_step-{id}.pt', weights_only=True)\n",
@@ -367,7 +390,7 @@
     "            voters=4\n",
     "        ))\n",
     "        \n",
-    "    with open(f'checkpoint-{id}.json', 'w') as f:\n",
+    "    with open(f'checkpoint-{id}_trick_results.json', 'w') as f:\n",
     "        json.dump(comps, f)"
    ]
   },
@@ -388,15 +411,14 @@
    "source": [
     "import torch\n",
     "import json\n",
+    "import random\n",
     "from llama import Llama\n",
     "from llama.workflows.tot import load_math_problems, benchmark_solution_quality\n",
     "from tqdm import tqdm\n",
     "\n",
-    "problems = load_math_problems(\n",
-    "    '../data/MATH',\n",
-    "    split='train',\n",
-    "    problem_types=['counting_and_probability']\n",
-    ")[:200]\n",
+    "random.seed(42)\n",
+    "problems = load_math_problems('../data/MATH', split='val')\n",
+    "problems = random.sample(problems, 200)\n",
     "\n",
     "for id in [99, 199, 299, 399]: \n",
     "    checkpoint = torch.load(f'/scratch4/jeisner1/tjbai/checkpoints/lora_epoch-0_step-{id}.pt', weights_only=True)\n",
@@ -417,25 +439,121 @@
     "        ))\n",
     "        \n",
     "    with open(f'checkpoint-{id}_solution_quality.json', 'w') as f:\n",
-    "        json.dump(comps, f)        "
+    "        json.dump(comps, f)\n",
+    "        \n",
+    "# TODO -- get the untrained version's results too"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8caef2ef-03ee-4845-a585-c49608ca4f3d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> initializing model parallel with size 1\n",
+      "> initializing ddp with size 1\n",
+      "> initializing pipeline with size 1\n",
+      "Loaded in 13.94 seconds\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▌         | 10/200 [00:25<06:12,  1.96s/it]"
+      "100%|██████████| 200/200 [13:22<00:00,  4.01s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "137 63\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 200/200 [13:23<00:00,  4.02s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98 102\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 200/200 [14:00<00:00,  4.20s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99 101\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 200/200 [13:52<00:00,  4.16s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92 108\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 200/200 [13:53<00:00,  4.17s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "107 93\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "llama.model.set_adapter_state(enabled=False)\n",
+    "import os\n",
+    "from llama import Llama\n",
+    "\n",
+    "os.environ[\"RANK\"] = \"0\"\n",
+    "os.environ[\"WORLD_SIZE\"] = \"1\"\n",
+    "os.environ[\"MASTER_ADDR\"] = \"localhost\"\n",
+    "os.environ[\"MASTER_PORT\"] = \"29500\"\n",
+    "\n",
+    "llama = Llama.build(\n",
+    "    ckpt_dir='/scratch4/jeisner1/tjbai/llama_8b',\n",
+    "    tokenizer_path='/scratch4/jeisner1/tjbai/llama_8b/tokenizer.model',\n",
+    "    max_seq_len=8192,\n",
+    "    max_batch_size=4,\n",
+    "    model_parallel_size=1,\n",
+    ")\n",
     "\n",
     "import re\n",
     "import json\n",
@@ -443,7 +561,6 @@
     "from tqdm import tqdm\n",
     "from collections import Counter\n",
     "from llama.workflows.tot import load_math_problems, benchmark_solution_quality, parse_choice\n",
-    "\n",
     "\n",
     "evaluator_prompt = '''\n",
     "You are evaluating final answers to AMC/AIME competition problems. You will receive:\n",
@@ -480,14 +597,12 @@
     "VERDICT_NOTE: (one sentence explanation)\n",
     "'''\n",
     "\n",
-    "problems = load_math_problems(\n",
-    "    '../data/MATH',\n",
-    "    split='train',\n",
-    "    problem_types=['counting_and_probability']\n",
-    ")[:200]\n",
+    "random.seed(42)\n",
+    "problems = load_math_problems('/home/tbai4/llama3/data/MATH', split='val')\n",
+    "problems = random.sample(problems, 200)\n",
     "\n",
     "for id in [0, 99, 199, 299, 399]:\n",
-    "    with open(f'checkpoint-{id}_solution_quality.json', 'r') as f:\n",
+    "    with open(f'/home/tbai4/llama3/dumps/checkpoint-{id}_solution_quality.json', 'r') as f:\n",
     "        data = json.load(f)\n",
     "\n",
     "    baseline_win = 0\n",
@@ -530,23 +645,205 @@
     "            }\n",
     "        ]\n",
     "\n",
-    "        [evaluation] = llama.chat_completion(\n",
-    "            [dialog],\n",
+    "        outputs = llama.chat_completion(\n",
+    "            [dialog for _ in range(3)],\n",
     "            max_gen_len=256,\n",
     "            temperature=0.7,\n",
     "            top_p=0.9,\n",
     "            seed=42,\n",
     "        )\n",
-    "\n",
-    "        match = re.search(r'VERDICT:\\s*(\\d)', evaluation['generation']['content'])\n",
-    "        if match:\n",
-    "            num = int(match.group(1))\n",
-    "            if (num == 1 and baseline_first) or (num == 2 and not baseline_first):\n",
-    "                baseline_win += 1\n",
-    "            else:\n",
-    "                cached_win += 1\n",
+    "        \n",
+    "        baseline_vote = 0\n",
+    "        cached_vote = 0\n",
+    "        for evaluation in outputs:\n",
+    "            match = re.search(r'VERDICT:\\s*(\\d)', evaluation['generation']['content'])\n",
+    "            if match:\n",
+    "                num = int(match.group(1))\n",
+    "                if (num == 1 and baseline_first) or (num == 2 and not baseline_first):\n",
+    "                    baseline_vote += 1\n",
+    "                else:\n",
+    "                    cached_vote += 1\n",
+    "        \n",
+    "        baseline_win += baseline_vote > cached_vote\n",
+    "        cached_win += cached_vote > baseline_vote\n",
     "                \n",
     "    print(baseline_win, cached_win)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "56310516-d7fa-4d1d-93f7-9fc461f53c16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> initializing model parallel with size 1\n",
+      "> initializing ddp with size 1\n",
+      "> initializing pipeline with size 1\n",
+      "Converting to LoRA\n",
+      "Loaded in 15.68 seconds\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "from llama import Workflow\n",
+    "from llama.workflows.tot import tot_cached, load_math_problems\n",
+    "\n",
+    "os.environ[\"RANK\"] = \"0\"\n",
+    "os.environ[\"WORLD_SIZE\"] = \"1\"\n",
+    "os.environ[\"MASTER_ADDR\"] = \"localhost\"\n",
+    "os.environ[\"MASTER_PORT\"] = \"29500\"\n",
+    "\n",
+    "workflow = Workflow.build(\n",
+    "    ckpt_dir='/scratch4/jeisner1/tjbai/llama_8b',\n",
+    "    tokenizer_path='/scratch4/jeisner1/tjbai/llama_8b/tokenizer.model',\n",
+    "    max_seq_len=8192,\n",
+    "    max_batch_size=4,\n",
+    "    model_parallel_size=1,\n",
+    "    max_nodes=20,\n",
+    "    use_lora=True,\n",
+    "    lora_rank=8,\n",
+    "    lora_alpha=16,\n",
+    "    lora_dropout=0.1\n",
+    ")\n",
+    "\n",
+    "checkpoint = torch.load(f'/scratch4/jeisner1/tjbai/checkpoints/lora_epoch-0_step-99.pt', weights_only=True)\n",
+    "workflow.model.load_state_dict(checkpoint['lora'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ddaaac89-97a9-48e3-9ffd-6a247d79249b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "problems = load_math_problems(\n",
+    "    '../data/MATH',\n",
+    "    split='train',\n",
+    "    problem_types=['counting_and_probability']\n",
+    ")[:200]\n",
+    "\n",
+    "from llama import Llama\n",
+    "from llama.workflows.tot import benchmark_solution_quality\n",
+    "\n",
+    "llama = Llama(workflow.model, workflow.tokenizer)\n",
+    "\n",
+    "outputs = benchmark_solution_quality(\n",
+    "    llama=llama,\n",
+    "    workflow=workflow,\n",
+    "    problem=problems[0]['problem'],\n",
+    "    branching_factor=8,\n",
+    "    voters=4,\n",
+    "    compact=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cbb9c4e-dda0-4c48-8bf4-4ebfded6e964",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "from llama import Llama\n",
+    "from llama.workflows.tot import load_math_problems\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "os.environ[\"RANK\"] = \"0\"\n",
+    "os.environ[\"WORLD_SIZE\"] = \"1\"\n",
+    "os.environ[\"MASTER_ADDR\"] = \"localhost\"\n",
+    "os.environ[\"MASTER_PORT\"] = \"29500\"\n",
+    "\n",
+    "llama = Llama.build(\n",
+    "    ckpt_dir='/scratch4/jeisner1/tjbai/llama_8b',\n",
+    "    tokenizer_path='/scratch4/jeisner1/tjbai/llama_8b/tokenizer.model',\n",
+    "    max_seq_len=1024,\n",
+    "    max_batch_size=3,\n",
+    "    model_parallel_size=1,\n",
+    ")\n",
+    "\n",
+    "evaluator_prompt = '''\n",
+    "You are a strict evaluator for mathematics problems. You will assess:\n",
+    "1. Problem statement \n",
+    "2. Official solution and final answer\n",
+    "3. Student's attempted solution and final answer\n",
+    "\n",
+    "Evaluation criteria:\n",
+    "- Final answers must be mathematically equivalent to the official solution\n",
+    "- All valid equivalent expressions are correct (e.g., 1/2 vs 0.5 vs 2^-1)\n",
+    "\n",
+    "Output: Respond with ONLY \"correct\" or \"incorrect\" based on the final answer.\n",
+    "'''\n",
+    "\n",
+    "problems = load_math_problems('/home/tbai4/llama3/data/MATH', split='val')\n",
+    "\n",
+    "for id in [-1, 0, 99, 199, 299, 399]:\n",
+    "    if id == -1:\n",
+    "        with open(f'/home/tbai4/llama3/baseline_e2e.json') as f:\n",
+    "            data = json.load(f)\n",
+    "    else:\n",
+    "        with open(f'/home/tbai4/llama3/checkpoint-{id}_e2e.json', 'r') as f:\n",
+    "            data = json.load(f)\n",
+    "        \n",
+    "    for d, problem_obj in tqdm(zip(data, problems), total=280):\n",
+    "        problem = problem_obj['problem']\n",
+    "        solution = problem_obj['solution']\n",
+    "        attempt = llama.tokenizer.decode(d['final_tokens'])\n",
+    "        \n",
+    "        dialog = [\n",
+    "            {'role': 'system', 'content': evaluator_prompt},\n",
+    "            {'role': 'user', 'content': f'''\n",
+    "PROBLEM STATEMENT:\n",
+    "{problem}\n",
+    "\n",
+    "GROUND TRUTH SOLUTION:\n",
+    "{solution}\n",
+    "\n",
+    "ATTEMPTED SOLUTION:\n",
+    "{attempt}\n",
+    "'''\n",
+    "            }\n",
+    "        ]\n",
+    "            \n",
+    "        outputs = llama.chat_completion(\n",
+    "            [dialog for _ in range(3)],\n",
+    "            max_gen_len=256,\n",
+    "            temperature=0.7,\n",
+    "            top_p=0.9,\n",
+    "            seed=42,\n",
+    "        )\n",
+    "        \n",
+    "        inc = 0\n",
+    "        cor = 0\n",
+    "        for o in outputs:\n",
+    "            if o['generation']['content'] == 'incorrect':\n",
+    "                inc += 1\n",
+    "            elif o['generation']['content'] == 'correct':\n",
+    "                cor += 1\n",
+    "            else:\n",
+    "                raise Exception()\n",
+    "\n",
+    "        correct += cor > inc\n",
+    "        \n",
+    "    print(correct)"
    ]
   }
  ],
