update qa exploratory notebook

--- a/examples/qa.ipynb
+++ b/examples/qa.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "cea0e884-4cc3-4dba-bdf6-b3bb39b55902",
    "metadata": {},
    "outputs": [
@@ -203,16 +203,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:23<00:00,  1.29it/s]\n"
+      "100%|██████████| 30/30 [00:23<00:00,  1.28it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "11052"
+       "11292"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,10 +231,10 @@
     "\n",
     "    for i, (s, answer) in enumerate(zip(subset, parse_items(answer))):\n",
     "        output.extend([\n",
-    "            f\"### Question {i+1}\",\n",
-    "            f\"**Question:** {s['Question']}\", \n",
-    "            f\"**Ground Truth:** {s['Answer']['Value']}\",\n",
-    "            f\"**Generated:** {answer}\"\n",
+    "            f\"### Question {i+1}\\n\",\n",
+    "            f\"**Question:** {s['Question']}\\n\", \n",
+    "            f\"**Ground Truth:** {s['Answer']['Value']}\\n\",\n",
+    "            f\"**Generated:** {answer}\\n\"\n",
     "        ])\n",
     "        if i < len(subset) - 1:\n",
     "            output.append(\"\\n---\\n\")\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "id": "4b767bfe-a467-4893-b842-2235de1971ee",
    "metadata": {},
    "outputs": [
@@ -261,11 +261,9 @@
      "output_type": "stream",
      "text": [
       "annotate=False, compact=False: 100%|██████████| 30/30 [00:17<00:00,  1.74it/s]\n",
-      "annotate=True, compact=False: 100%|██████████| 30/30 [00:17<00:00,  1.76it/s]\n",
-      "annotate=False, compact=True:   0%|          | 0/30 [00:00<?, ?it/s]/home/tbai4/llama3/llama/workflow.py:127: UserWarning: Multi-node compaction not fully implemented. Use caution.\n",
-      "  warnings.warn(\"Multi-node compaction not fully implemented. Use caution.\")\n",
+      "annotate=True, compact=False: 100%|██████████| 30/30 [00:17<00:00,  1.75it/s]\n",
       "annotate=False, compact=True: 100%|██████████| 30/30 [00:16<00:00,  1.81it/s]\n",
-      "annotate=True, compact=True: 100%|██████████| 30/30 [00:18<00:00,  1.65it/s]\n"
+      "annotate=True, compact=True: 100%|██████████| 30/30 [00:18<00:00,  1.64it/s]\n"
      ]
     }
    ],
@@ -282,24 +280,25 @@
     "]\n",
     "\n",
     "for filename, annotate, compact in configs:\n",
-    "   output = []\n",
-    "   for seed in tqdm(range(30), desc=f\"annotate={annotate}, compact={compact}\"):\n",
-    "       random.seed(seed)\n",
-    "       output.append(f\"\\n## Trial {seed}\\n\")\n",
-    "       subset = random.sample(problems, k=2)\n",
-    "       answer = ask_parallel(workflow, subset, annotate=annotate, compact=compact)\n",
+    "    output = []\n",
+    "    for seed in tqdm(range(30), desc=f\"annotate={annotate}, compact={compact}\"):\n",
+    "        random.seed(seed)\n",
+    "        output.append(f\"\\n## Trial {seed}\\n\")\n",
+    "        subset = random.sample(problems, k=2)\n",
+    "        answer = ask_parallel(workflow, subset, annotate=annotate, compact=compact)\n",
     "\n",
-    "       for i, (s, answer) in enumerate(zip(subset, parse_items(answer))):\n",
-    "           output.extend([\n",
-    "               f\"### Question {i+1}\",\n",
-    "               f\"**Question:** {s['Question']}\", \n",
-    "               f\"**Ground Truth:** {s['Answer']['Value']}\",\n",
-    "               f\"**Generated:** {answer}\"\n",
-    "           ])\n",
-    "           if i < len(subset) - 1:\n",
-    "               output.append(\"\\n---\\n\")\n",
+    "        for i, (s, answer) in enumerate(zip(subset, parse_items(answer))):\n",
+    "            output.extend([\n",
+    "                f\"### Question {i+1}\\n\",\n",
+    "                f\"**Question:** {s['Question']}\\n\", \n",
+    "                f\"**Ground Truth:** {s['Answer']['Value']}\\n\",\n",
+    "                f\"**Generated:** {answer}\\n\"\n",
+    "            ])\n",
+    "            \n",
+    "        if i < len(subset) - 1:\n",
+    "            output.append(\"\\n---\\n\")\n",
     "\n",
-    "   Path(f'/home/tbai4/llama3/dumps/{filename}').write_text('\\n'.join(output))"
+    "    Path(f'/home/tbai4/llama3/dumps/triviaqa/{filename}').write_text('\\n'.join(output))"
    ]
   },
   {
